--- a/templates/aliwood/components/navbar.html
+++ b/templates/aliwood/components/navbar.html
@@ -2,12 +2,12 @@
 {% load static %}
 <nav class="navbar">
 	<div class="navbar-brand">
-		<a href="/">
+		<a href="/home">
 			<img src="{% static 'image/brand.png' %}">
 		</a>
 	</div>
 	<div class="navbar-nav">
-		<div class="nav-link nav-link-home"><a href="/">首页</a></div>
+		<div class="nav-link nav-link-home"><a href="/home">首页</a></div>
 		<div class="nav-border"></div>
 		<div class="nav-link nav-link-data"><a href="/data">视频数据</a></div>
 		<div class="nav-link"><a href="/edit/style_templat">视频剪辑</a></div>
