--- a/static/css/base.css
+++ b/static/css/base.css
@@ -124,7 +124,7 @@ body {
 }
 
 .dropzone {
-  display: inline-block;
+  /*display: inline-block;*/
   min-height: 1.31rem !important;
   border: 0 !important;
   background: none !important;
