--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -77,10 +77,12 @@
   right: 0.75rem;
   width: 2.47rem;
   height: 0.64rem;
+  pointer-events: none;
 }
 
-.content .active {
+.content > div.active {
   background: #FACD52;
+  pointer-events: auto;
 }
 
 .case-simulate .content-section-item {
@@ -257,6 +259,11 @@
   margin-right: 0.13rem;
 }
 
+.scenery-type .active {
+  background: #fff !important;
+  border: 0.05rem solid #5D5D5D;
+}
+
 .scenery-group {
   display: flex;
   justify-content: left;
@@ -264,14 +271,17 @@
   margin-left: 0.7rem;
 }
 
-.scenery-group .scenery-item {
+.scenery-item {
   width: 0.62rem;
   height: 0.4rem;
-  margin-right: 0.23rem;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+
+.marginRight23 {
+  margin-right: 0.23rem;
 }
 
 .scenery-item-first {
@@ -440,5 +450,37 @@
   left: 1.5rem;
   width: 1.5rem;
   height: 0.69rem;
+  cursor: default;
+}
+
+.style-template .content-section-items .video-item .video-item-thumbnail {
+  width: 1.2rem;
+  height: 1.2rem;
+}
+
+.from-data-result {
+  position: relative;
+  width: 1.31rem;
+  height: 1.31rem;
+}
+
+.from-data-result > img {
+  width: 1.31rem;
+  height: 1.31rem;
+}
+
+.from-data-result .from-data-result-delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+
+.from-data-result .from-data-result-delete img {
+  width: 0.3rem;
+  height: 0.3rem;
+}
+
+.scenery-type .param-item-option {
   cursor: default;
 }
