--- a/templates/aliwood/pages/data/data.html
+++ b/templates/aliwood/pages/data/data.html
@@ -11,107 +11,48 @@
 {% block contents %}
 <div class="content dark full-screen paddingSideBar">
   <div class="video-list-wrapper content-section">
-    <div class="video-item">
+    {% for video in videos %}
+    <div class="video-item" id="{{ video.url }}">
       <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
+        <img src="{{ video.imageUrl }}">
         <div class="video-item-icon">
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </div>
       </div>
     </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
-    <div class="video-item">
-      <div class="video-item-thumbnail">
-        <img src="{% static 'image/video.jpg' %}">
-        <div class="video-item-icon">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </div>
-      </div>
-    </div>
+    {% endfor %}
   </div>
   <nav class="nav-pagination" aria-label="Page navigation">
     <ul class="pagination">
       <li>
-        <a href="#" aria-label="Previous">
-          <span aria-hidden="true">上一页</span>
-        </a>
+          {% if videos.has_previous %}
+            <a href="/?page={{ videos.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">上一页</span>
+            </a>
+          {% else %}
+              <a href="#" aria-label="Previous">
+              <span aria-hidden="true">上一页</span>
+            </a>
+          {% endif %}
       </li>
-      <li class="active"><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="#">3</a></li>
-      <li><a href="#">...</a></li>
+      <li class="active">
+            <a href="?page={{ videos.number }}">{{ videos.number }}</a>
+      </li>
       <li>
-        <a href="#" aria-label="Next">
-          <span aria-hidden="true">下一页</span>
-        </a>
+          {% if videos.has_next %}
+            <a href="?page={{ videos.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">下一页</span>
+            </a>
+          {% else %}
+              <a href="#" aria-label="Next">
+              <span aria-hidden="true">下一页</span>
+            </a>
+          {% endif %}
       </li>
     </ul>
   </nav>
   <div class="upload-btn">
-    <a href="./upload">上传自己的模板视频</a>
+    <a href="/data/upload">上传自己的模板视频</a>
   </div>
   <div class="player-shadow flexColumn">
     <div class="player-shadow-close" id="player-btn-close">
@@ -123,7 +64,7 @@
       <div class="shadow-player-btn"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div>
     </div>
     <div class="upload-btn">
-      <a href="./detail">查看视频分析</a>
+      查看视频分析
     </div>
   </div>
 </div>
@@ -131,84 +72,69 @@
 
 {% block sidebar %}
 <div class="sidebar">
-  <div class="filter">
+  <div class="filter" id="targetClient">
     <div class="filter-title">性别</div>
     <div class="filter-content">
       <div class="filter-item-group">
-        <div class="filter-item">男</div>
-        <div class="filter-item active">女</div>
-        <div class="filter-item">儿童</div>
-        <div class="filter-item">男女通用</div>
+        {% for targetClient in targetClients %}
+
+                <div class="filter-item" id="{{ targetClient.id }}">{{ targetClient.name }}</div>
+
+        {% endfor %}
       </div>
     </div>
   </div>
-  <div class="filter">
+  <div class="filter" id="product_category">
     <div class="filter-title">产品类型</div>
-    <div class="filter-content">
-      <div class="filter-item-group">
-        <div class="filter-item">上衣</div>
-        <div class="filter-item active">外套</div>
-        <div class="filter-item">毛衣</div>
-        <div class="filter-item">衬衫</div>
-      </div>
-      <div class="filter-item-group">
-        <div class="filter-item">卫衣</div>
-        <div class="filter-item">T恤</div>
-        <div class="filter-item">连衣裙</div>
-        <div class="filter-item">长裙</div>
-      </div>
-      <div class="filter-item-group">
-        <div class="filter-item">短裙</div>
-        <div class="filter-item">内衣</div>
-        <div class="filter-item">长裤</div>
-        <div class="filter-item">短裤</div>
-      </div>
-      <div class="filter-item-group">
-        <div class="filter-item">墨镜</div>
-        <div class="filter-item">包</div>
-        <div class="filter-item">鞋</div>
-        <div class="filter-item">其他</div>
-      </div>
-    </div>
+        <div class="filter-content">
+        {% for product_category in product_categories %}
+         {% if forloop.counter0|divisibleby:4%}
+             <div class="filter-item-group">
+         {% endif %}
+            <div class="filter-item" id="{{ product_category.id}}">{{ product_category.name}}</div>
+         {% if forloop.counter|divisibleby:4%}
+            </div>
+         {% endif %}
+        {% endfor %}
+        </div>
   </div>
-  <div class="filter">
+  <div class="filter" id="cameraScene">
     <div class="filter-title">拍摄场景</div>
     <div class="filter-content">
       <div class="filter-item-group">
-        <div class="filter-item">室内</div>
-        <div class="filter-item active">室外</div>
+       {% for cameraScene in cameraScenes %}
+            <div class="filter-item" id="{{ cameraScene.id }}">{{ cameraScene.name }}</div>
+        {% endfor %}
       </div>
     </div>
   </div>
-  <div class="filter">
+  <div class="filter" id="serviceScene">
     <div class="filter-title">业务场景</div>
     <div class="filter-content">
       <div class="filter-item-group">
-        <div class="filter-item">产品上新</div>
-        <div class="filter-item active">品牌宣传</div>
+        {% for serviceScene in serviceScenes %}
+                <div class="filter-item" id="{{ serviceScene.id }}">{{ serviceScene.name }}</div>
+        {% endfor %}
       </div>
     </div>
   </div>
-  <div class="filter">
+  <div class="filter" id="tempoStyle">
     <div class="filter-title">节奏风格</div>
     <div class="filter-content">
       <div class="filter-item-group">
-        <div class="filter-item">动感</div>
-        <div class="filter-item active">变奏</div>
-        <div class="filter-item">日常</div>
-        <div class="filter-item active">平缓</div>
+        {% for tempoStyle in tempoStyles %}
+            <div class="filter-item" id="{{ tempoStyle.id }}">{{ tempoStyle.name }}</div>
+        {% endfor %}
       </div>
     </div>
   </div>
-  <div class="filter">
+  <div class="filter" id="pictureStyle">
     <div class="filter-title">画面风格</div>
     <div class="filter-content">
       <div class="filter-item-group">
-        <div class="filter-item">时尚</div>
-        <div class="filter-item active">优雅</div>
-        <div class="filter-item">可爱</div>
-        <div class="filter-item">自然</div>
-        <div class="filter-item">性感</div>
+        {% for pictureStyle in pictureStyles %}
+            <div class="filter-item" id="{{ pictureStyle.id }}">{{ pictureStyle.name }}</div>
+        {% endfor %}
       </div>
     </div>
   </div>
@@ -217,6 +143,9 @@
 
 {% block scripts %}
 <script type="text/javascript">
+  var filter = {};
+  // 选中的视频id
+  var videoId = '';
   // 切换标签
   $('.filter-item').click(function () {
     $(this).parent().children().each(function () {
@@ -230,14 +159,36 @@
     $(this).addClass('active');
   });
 
-  // 加载dplayer
-  var dp = new DPlayer({
-    container: document.getElementById('dplayer'),
-    video: {
-      url: '/media/video/movie.ogg',
-      pic: 'demo.jpg',
-      thumbnails: 'thumbnails.jpg'
-    },
+  // 初始化过滤器
+  initFilter();
+
+  function initFilter() {
+    $('.filter-item').click(function () {
+        var queryParams = getFilterParams();
+        window.open('./?' + queryParams, '_self');
+    });
+
+    function getFilterParams() {
+        $('.filter-item-group').parent().parent().each(function() {
+            var fileName = $(this).attr('id');
+            filter[fileName] = $(this).find('.filter-item-group').children('.active').attr('id');
+        });
+        var res = '';
+        for (var key in filter) {
+            if(filter[key])
+                res = res + key + '=' + filter[key] + '&';
+        }
+        return res.substring(0, res.length - 1);
+    }
+  }
+
+  $('.video-item').click(function() {
+    videoId = $(this).attr('videoId');
+  });
+
+  // 查看视频分析
+  $('.upload-btn').click(function() {
+    window.open('/data/detail?videoId=' + videoId);
   });
 </script>
 <script type="text/javascript" src="{% static 'js/player-shadow.js' %}"></script>
